# ISatDownOneDay

./: .gitignore  .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  CNF.hpp  DIMACS.cpp  DIMACS.hpp  SitDown-v1.cpp  SitDown-v1.hpp  TODO.md  clause.cpp  clause.hpp  main.cpp  solver.cpp  solver.hpp  types.hpp
src/base/: solver.cpp  solver.hpp
src/bitvectors/: CNF.hpp
test/: CMakeLists.txt  catch_test.cpp
test/test_dimacs/: dimacs_1.txt
